[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Phil Jones", email = "pgjones@tozo.dev"},
    {name = "Ryan Kelley", email = "rykelley@gmail.com"},
]
dependencies = [
    "quart>=0.18.0",
    "quart-auth>=0.7.0",
    "bcrypt>=3.2.2",
    "zxcvbn>=4.4.28",
    "itsdangerous>=2.1.2",
    "quart-rate-limiter>=0.7.0",
    "pydantic[email]>=1.9.1",
    "quart-schema>=0.12.0",
    "quart-db>=0.2.0",
    "httpx>=0.23.0",
    "disposable-email-domains>=0.0.79",
    "pyotp>=2.6.0",
]
requires-python = "==3.11.*"
license = {text = "MIT"}
readme = "README.md"
[tool]
[tool.pdm]
distribution = false
[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.vulture]
min_confidence = 100

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[[tool.mypy.overrides]]
module =["h11"]
ignore_missing_imports = true

[tool.pdm.scripts]
audit = "pip-audit"
format-black = "black src/ tests/"
format-djhtml = "djhtml src/backend/templates -t 2"
format-isort = "isort src tests"
format = {composite = ["format-black", "format-djhtml", "format-isort"]}
lint-bandit = "bandit -r src/"
lint-black = "black --check --diff src/ tests/"
lint-djhtml = "djhtml src/backend/templates -t 2 --check"
lint-flake8 = "flake8 src/ tests/"
lint-isort = "isort --check --diff src tests"
lint-mypy = "mypy src/backend tests"
lint-vulture = "vulture src"
lint = {composite = ["lint-bandit", "lint-black", "lint-djhtml", "lint-flake8", "lint-isort", "lint-mypy", "lint-vulture"]}
start = {cmd = "quart --app src/backend/run.py run --port 5050", env_file = "development.env"}
recreate-db-base = "quart --app src/backend/run.py recreate_db"
recreate-db = {composite = ["recreate-db-base"], env_file = "development.env"}
test = {composite = ["recreate-db-base", "pytest tests/"], env_file = "testing.env"}

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=0.971",
    "flake8>=4.0.1",
    "bandit>=1.7.4",
    "vulture>=2.5",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "djhtml>=3.0.7",
    "setuptools>=63.2.0",
    "freezegun>=1.2.1",
    "pip-audit>=2.4.2",
]
